# bob2020

./: Cargo.toml  README.md
benches/: bob2020.rs  borrow_mut.rs  mem_burn.rs  mpsc_bcast.rs  static_borrow.rs  unchecked_get.rs
report/Borrow Mut/Clone/base/: benchmark.json  raw.csv  sample.json  tukey.json
report/Borrow Mut/Clone/change/: estimates.json
report/Borrow Mut/Clone/new/: estimates.json  raw.csv  sample.json
report/Borrow Mut/Clone/report/: index.html
report/Borrow Mut/Mutable Transmute/base/: raw.csv  sample.json
report/Borrow Mut/Mutable Transmute/change/: estimates.json
report/Borrow Mut/Mutable Transmute/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
report/Borrow Mut/Mutable Transmute/report/: index.html
report/Borrow Mut/report/: index.html
report/Bounded Vector/Bounded [Preallocated]/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
report/Bounded Vector/Bounded [Preallocated]/change/: estimates.json
report/Bounded Vector/Bounded [Preallocated]/new/: estimates.json  raw.csv  sample.json
report/Bounded Vector/Bounded [Preallocated]/report/: index.html
report/Bounded Vector/Unbounded/base/: sample.json  tukey.json
report/Bounded Vector/Unbounded/change/: estimates.json
report/Bounded Vector/Unbounded/new/: benchmark.json  estimates.json  raw.csv
report/Bounded Vector/report/: index.html
report/MPSC Multi-Send/report/: index.html
report/Static Borrow/report/: index.html
report/Vector Get/report/: index.html
report/report/: index.html
src/: main.rs
(+54 files in other folders)
