[package]
name = "bob2020"
version = "0.1.0"
authors = ["Heinz Gies <hgies@wayfair.com>", "Darach Ennis <dennis@wayfair.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"criterion" = "0.3"
"walkdir" = "2.3.1"

[[bench]]
name = "bob2020"
harness = false
